# mapping-sandbox

./: README.md  pyproject.toml
mapping_sandbox/: base.py  functools.py  schema.py  with_jinja.py  with_pipeline.py  with_pydantic.py  with_pydantic_builder.py  with_pydantic_pipeline.py  with_python.py  with_reduce.py
mapping_sandbox/jinja/: __init__.py
mapping_sandbox/pipeline/: __init__.py
mapping_sandbox/python/: __init__.py
mapping_sandbox/reduce/: __init__.py
mapping_sandbox/templates/: employee.json
tests/: test_end_to_end.py  test_with_pydantic.py  test_with_pydantic_builder.py
tests/pydantic/: test_mapper.py
